tests/snapshots/examples_fixtures/io__aoc_day2_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day2_part2.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/io/aoc_day2_part2.flx:6:1
  |
6 | print(Day2.solve_file("examples/io/aoc_day2.txt"))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/io/aoc_day2_part2.flx:6:1
  |
6 | print(Day2.solve_file("examples/io/aoc_day2.txt"))
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
